# bevycraft

./: Cargo.toml
bevycraft_app/: Cargo.toml
bevycraft_app/benches/: bevycraft_benchmarks.rs
bevycraft_app/src/: main.rs
bevycraft_app/src/plugins/: default_registries.rs  game_registries.rs
bevycraft_core/: Cargo.toml
bevycraft_core/src/: lib.rs
bevycraft_core/src/identity/: i_string.rs  resource_id.rs
bevycraft_core/src/memory/: packed_array_u32.rs
bevycraft_core/src/registry/: compiled_registry.rs
bevycraft_world/: Cargo.toml
bevycraft_world/src/: lib.rs
bevycraft_world/src/block/: block.rs
bevycraft_world/src/chunk/: section.rs
bevycraft_world/src/morton/: morton_3d.rs
bevycraft_world/src/spatial/: mod.rs  node_64.rs  tree_64.rs
