[package]
name = "bevycraft_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevycraft_core.workspace = true
bevycraft_world.workspace = true

bevy.workspace = true

phf.workspace = true

rkyv.workspace = true

criterion.workspace = true

[[bench]]
name = "bevycraft_benchmarks"
harness = false